# Zemu2

./: .clang-format  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Conan.cmake
src/: CMakeLists.txt  Screen.cpp  Screen.h  main.cpp
src/common/: CMakeLists.txt
src/common/include/: IScreen.h  Pixel.h  ScreenConstants.h
src/emulation/: AbstractRamBank.cpp  AbstractRamBank.h  BasicRegister.cpp  BasicRegister.h  BootRom.cpp  BootRom.h  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  CPURegisters.cpp  CPURegisters.h  GameBoy.cpp  IBus.cpp  IBus.h  IRamBank.cpp  IRamBank.h  Instruction.cpp  Instruction.h  LCDCRegister.cpp  LCDCRegister.h  MockBus.cpp  MockBus.h  OpTables.cpp  OpTables.h  Operation.cpp  Operation.h  PPU.cpp  PPU.h  Pallet.cpp  Pallet.h  RamBank.cpp  RamBank.h  RamEcho.cpp  RamEcho.h  ReadWriteDevice.h  STATRegister.cpp  STATRegister.h  bitUtils.cpp  (+1 more)
src/emulation/Operations/: Decrement.cpp  Decrement.h  DirectExtendedLoad.cpp  DirectExtendedLoad.h  DirectLoad.cpp  DirectLoad.h  DirectLoadAndAddAsSigned.cpp  DirectLoadAndAddAsSigned.h  Increment.cpp  Increment.h  IndirectLoadFromParameter.cpp  IndirectLoadFromParameter.h  IndirectLoadFromPrefixAndCRegister.cpp  IndirectLoadFromPrefixAndCRegister.h  IndirectLoadFromPrefixAndParameter.cpp  IndirectLoadFromPrefixAndParameter.h  IndirectLoadFromRegisterPair.cpp  IndirectLoadFromRegisterPair.h  IndirectLoadToParameter.cpp  IndirectLoadToParameter.h  IndirectLoadToParameterAndPlusOne.cpp  IndirectLoadToParameterAndPlusOne.h  IndirectLoadToPrefixAndCRegister.cpp  IndirectLoadToPrefixAndCRegister.h  IndirectLoadToPrefixAndParameter.cpp  IndirectLoadToPrefixAndParameter.h  IndirectLoadToRegisterPair.cpp  IndirectLoadToRegisterPair.h  LoadFromRegister.cpp  LoadFromRegister.h  LoadFromRegisterPair.cpp  LoadFromRegisterPair.h  LoadToRegister.cpp  LoadToRegister.h  LoadToRegisterPair.cpp  LoadToRegisterPair.h  NOP.cpp  NOP.h  Operation.cpp  Operation.h  (+4 more)
src/emulation/include/: GameBoy.h
src/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  test.cpp
src/interface/: CMakeLists.txt  MainWindow.cpp
src/interface/include/: MainWindow.h
src/sdl/: main.cpp
test/: 16_bit_load_tests.cpp  8_bit_arithmatic_tests.cpp  8_bit_load_tests.cpp  CMakeLists.txt  bitUtils_tests.cpp  cpu_tests.cpp
